--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -69,6 +69,9 @@
     justify-content: flex-end;
     overflow: hidden;
 }
+.homepage-background-div.profile {
+    height: 400px;
+}
 .dropdown-user .dropdown-toggle>img {
     width: 60px;
 }
