--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -55,6 +55,36 @@
     margin-bottom: 0px;
 }
 
+.survey-background-div {
+    background: url(../assets/images/background.jpg) no-repeat bottom center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    overflow-x: hidden;
+    margin-bottom: 0;
+    width: 100%;
+    z-index: 1;
+    height: 25vh;
+    box-shadow: inset 0px -5px 10px -5px rgba(0,0,0,0.7);
+    position: fixed;
+    transition: all .3s ease-out;
+}
+.survey-background-button-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+}
+.survey-img-container-div {
+    padding-top: 27vh;
+    padding-bottom: 50px;
+    overflow: hidden;
+}
+
 .homepage-background-div {
     background: url(../assets/images/background.jpg) no-repeat bottom center fixed;
     -webkit-background-size: cover;
@@ -681,86 +711,32 @@
     width: 100%;
     max-width: 450px;
 }
-.survey-img-container {
-    width: 100%;
-    padding-top: 30px;
-}
-.single-survey-img-contain {
-    width: 150px;
-    height: 150px;
-    margin: 15px auto;
-}
-.single-survey-img {
-    border-radius: 50%;
-    padding: 4px;
-    border: 1px solid #ddd;
-    cursor: pointer;
-}
-.single-survey-img.active {
-    border: 5px solid #32c5d2;
-    padding: 0;
-}
-.single-survey-img:hover {
-    opacity: 0.7;
-}
-.survey-select-number {
-    width: 100%;
-    height: 100%;
-    background-color: #32c5d2;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.survey-number-text {
-    margin: 0;
-    padding-top: 40px;
-    font-size: 25pt;
-}
-.survey-size-text {
-    margin: 0;
-    margin-top: 10px;
-    font-size: 15pt;
-}
-.select-survey-number-container {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10053;
-    display: none;
-}
-.select-number-overlay {
-    width: 100%;
-    height: 100%;
+.user-selection-view-gallery-div {
     position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    opacity: 0.6;
-}
-.select-number-contain {
-    width: 100%;
     height: 100%;
-    left: 0;
-    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-.select-survey-number-text {
-    margin: 0;
-    padding-top: 55px;
-    font-size: 25pt;
+    bottom: 20px;
+    left: 80px;
+    z-index: 2;
+    cursor: pointer;
 }
 
 @media(max-width: 1199px) {
     .child-single-gallery-title-div {
         right: 30px;
     }
+    .user-selection-view-gallery-div {
+        left: 30px;
+    }
 }
 @media(max-width: 991px) {
     .child-single-gallery-title-div {
         right: -25px;
+    }
+    .user-selection-view-gallery-div {
+        left: -25px;
     }
 }
 @media(max-width: 767px) {
@@ -773,6 +749,13 @@
         display: block;
         width: 150px;
         background-color: #fff;
+    }
+    .user-selection-view-gallery-div {
+        height: auto;
+        bottom: 50%;
+        left: unset;
+        color: #fff;
+        width: 100%;
     }
     .child-single-gallery-title {
         text-align: center;
