--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -191,7 +191,7 @@
     text-shadow: 0 0 7px rgba(0,0,0,0.5);
 }
 .menu-button-right-div {
-    width: 65%;
+    width: 80%;
     margin-top: 10px;
 }
 
@@ -800,6 +800,13 @@
     right: -205px;
     transition: all .3s ease-out;
 }
+.gallery-report-link-a {
+    font-size: 15pt;
+}
+.gallery-save-pdf-link-a {
+    font-size: 15pt;
+    margin-top: 5px;
+}
 @media(max-width: 1199px) {
     .child-single-gallery-title-div {
         right: 30px;
@@ -827,6 +834,12 @@
     .gallery-like-text-alert-container>h3>small {
         color: #000;
         text-shadow: 0 0 7px rgb(255, 255, 255);
+    }
+    .summary-text {
+        font-size: 16pt;
+    }
+    .your-selection-text {
+        font-size: 16pt;
     }
 }
 @media(max-width: 767px) {
@@ -916,7 +929,7 @@
         width: 150px;
     }
     .menu-button-gotoHome-div {
-        width: 90%;
+        width: 150%;
     }
     .summary-text {
         font-size: 15pt;
